added a frontend service that gets the available questions for the competition